--- a/style.css
+++ b/style.css
@@ -1,50 +1,46 @@
 body {
     margin: 0px;
     padding: 0px;
-
-}
-
-.converter-body{
+  }
+  
+  .converter-body {
     width: 400px;
     height: 150px;
-    position:absolute;
-    top:50%;
+    position: absolute;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     box-shadow: 0px 0px 2px 1px #cacaca;
-    
+  }
   
-
-}
-
-.unit-converter{
+  .unit-converter {
     text-align: center;
     margin: 13px 0px;
     font-size: 40px;
     display: flex;
     align-items: center;
     margin-bottom: 12px;
-}
-
-input{
-    height:25px;
+  }
+  
+  input {
+    height: 20%;
     text-align: center;
     border: 1px solid black;
     margin-bottom: 12px;
-
-}
-#input{
-	margin-left: 25px;
-}
-#inputType,#resultType{
-   width:164.66px;
-   margin-left:25px;
-   color: red;
-
-   border: 1px solid black;
- 
-}
-
-#resultType{
+  }
+  #input {
+    margin-left: 25px;
+  }
+  #inputType,
+  #resultType {
+    width: 164.66px;
+    margin-left: 25px;
+    color: red;
+    height: 20%;
+    border: 1px solid black;
+  }
+  
+  #resultType {
     margin-left: 12.5px;
-}
+  }
+  
